# EmoConnect

./: README.md  db.sqlite3  main.py  pyproject.toml
apps/call_management/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/call_management/migrations/: 0001_initial.py
apps/payments/: models.py  serializers.py  urls.py  views.py
apps/payments/migrations/: 0001_initial.py  0002_subscription.py
apps/task_management/: admin.py  apps.py  models.py  serializers.py  tasks.py  urls.py  views.py
apps/task_management/migrations/: 0001_initial.py  0002_alter_task_options_and_more.py  0003_task_user.py  0004_alter_task_user.py
apps/users/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py  0002_emailotp.py
core/: .env  __init__.py  settings.py  urls.py
